name:                jhc
version:             2008.11.18
synopsis:            <Project description>
description:         <Project description>
category:            
license:             BSD3
license-file:        LICENSE
author:              John Meacham
maintainer:          lemmih@gmail.com
build-Depends:       base, syb, containers, mtl, pretty, array, bytestring
build-Depends:       binary, directory, readline, random, regex-compat
build-Depends:       graphviz, fgl, unix, zlib
build-Depends:       haskell98
build-type:          Custom

executable:          jhc
main-is:             Main.hs
Other-modules:       C.FFI, C.FromGrin2, Cmm.Op, C.Prims, DataConstructors, DerivingDrift.StandardRules,
                     E.CPR, E.Demand, E.LambdaLift, E.SSimplify, E.ToHs, E.TypeCheck, E.Type, FrontEnd.Class,
                     FrontEnd.Exports, FrontEnd.HsSyn, FrontEnd.KindInfer, FrontEnd.Representation, FrontEnd.SrcLoc,
                     FrontEnd.Tc.Kind, FrontEnd.Tc.Monad, Grin.SSimplify, Name.VConsts, Options, Ho.Type, Ho.Build
C-Sources:           cbits/md5sum.c, StringTable/StringTable_cbits.c
Includes:            cbits/_stdint.h
Include-dirs:        cbits
cc-Options:          -std=c99 -O2 -Wall
ghc-options:         
Extensions:          DeriveDataTypeable, ForeignFunctionInterface, EmptyDataDecls, GeneralizedNewtypeDeriving
                     MultiParamTypeClasses, FunctionalDependencies, FlexibleInstances, FlexibleContexts
                     UndecidableInstances, TypeSynonymInstances, ScopedTypeVariables, ParallelListComp,
                     OverlappingInstances, RecursiveDo, GADTs, RankNTypes
