name:                jhc
version:             0.5.20081118
synopsis:            Jhc Haskell Compiler
description:         
  jhc is a haskell compiler which aims to produce the most efficient programs possible via whole
  program analysis and other optimizations.
Tested-With:         GHC == 6.10.1
category:            Compiler
license:             BSD3
license-file:        LICENSE
author:              John Meacham <john@repetae.net>
maintainer:          lemmih@gmail.com
build-Depends:       base, syb, containers, mtl, pretty, array, bytestring
build-Depends:       binary, directory, readline, random, regex-compat
build-Depends:       graphviz, fgl, unix, zlib
build-Depends:       haskell98
build-type:          Custom
Extra-Source-Files:  cbits/_stdint.h, cbits/config.h, StringTable/StringTable_cbits.h, arch/generic.arch
                     arch/i686.arch, arch/x86_64.arch

executable:          jhc
main-is:             Main.hs
Other-modules:       C.FFI, C.FromGrin2, Cmm.Op, C.Prims, DataConstructors, DerivingDrift.StandardRules,
                     E.CPR, E.Demand, E.LambdaLift, E.SSimplify, E.ToHs, E.TypeCheck, E.Type, FrontEnd.Class,
                     FrontEnd.Exports, FrontEnd.HsSyn, FrontEnd.KindInfer, FrontEnd.Representation, FrontEnd.SrcLoc,
                     FrontEnd.Tc.Kind, FrontEnd.Tc.Monad, Grin.SSimplify, Name.VConsts, Options, Ho.Type, Ho.Build
C-Sources:           cbits/md5sum.c, StringTable/StringTable_cbits.c
Includes:            cbits/_stdint.h
Include-dirs:        cbits, StringTable
cc-Options:          -std=c99 -O2 -Wall
ghc-options:         
Extensions:          DeriveDataTypeable, ForeignFunctionInterface, EmptyDataDecls, GeneralizedNewtypeDeriving
                     MultiParamTypeClasses, FunctionalDependencies, FlexibleInstances, FlexibleContexts
                     UndecidableInstances, TypeSynonymInstances, ScopedTypeVariables, ParallelListComp,
                     OverlappingInstances, RecursiveDo, GADTs, RankNTypes, PatternGuards
Other-modules:
  CharIO, FindFixpoint, FlagOpts, Interactive, Options, PrimitiveOperators, UTF8,
  DataConstructors, FlagDump, GenUtil, PackedString, RawFiles, Stats,
  C.FromGrin2
  C.Arch
  C.FFI
  C.Generate
  C.Prims
  Cmm.Op
  Cmm.OpEval
  Cmm.Number
  DerivingDrift.RuleUtils
  DerivingDrift.DataP
  DerivingDrift.Drift
  DerivingDrift.StandardRules
  Doc.DocLike
  Doc.PPrint
  Doc.Pretty
  Doc.Chars
  Doc.Attr
  E.TypeAnalysis
  E.Annotate
  E.Arbitrary
  E.Binary
  E.CPR
  E.Demand
  E.Diff
  E.E
  E.Eta
  E.Eval
  E.FreeVars
  E.FromHs
  E.Inline
  E.LambdaLift
  E.LetFloat
  E.PrimOpt
  E.Program
  E.Rules
  E.SSimplify
  E.SStrictness
  E.Show
  E.Subst
  E.ToHs
  E.Traverse
  E.Type
  E.WorkerWrapper
  E.TypeCheck
  E.Values
  Fixer.Fixer
  Fixer.Supply
  Fixer.VMap
  FrontEnd.FrontEnd
  FrontEnd.Class
  FrontEnd.Desugar
  FrontEnd.DataConsAssump
  FrontEnd.DeclsDepends
  FrontEnd.DependAnalysis
  FrontEnd.Exports
  FrontEnd.Diagnostic
  FrontEnd.HsErrors
  FrontEnd.HsPretty
  FrontEnd.HsSyn
  FrontEnd.Infix
  FrontEnd.KindInfer
  FrontEnd.Lexer
  FrontEnd.ParseMonad
  FrontEnd.ParseUtils
  FrontEnd.Syn.Traverse
  FrontEnd.Syn.Options
  FrontEnd.Rename
  FrontEnd.SrcLoc
  FrontEnd.Representation
  FrontEnd.Tc.Class
  FrontEnd.Tc.Kind
  FrontEnd.Tc.Main
  FrontEnd.Tc.Module
  FrontEnd.Tc.Monad
  FrontEnd.Tc.Type
  FrontEnd.Tc.Unify
  FrontEnd.TypeSynonyms
  FrontEnd.TypeSigs
  FrontEnd.HsParser
  FrontEnd.TypeSyns
  FrontEnd.Unlit
  FrontEnd.Utils
  FrontEnd.Warning
  Grin.DeadCode
  Grin.Arity
  Grin.Devolve
  Grin.Embed
  Grin.FromE
  Grin.EvalInline
  Grin.Grin
  Grin.HashConst
  Grin.Interpret
  Grin.Lint
  Grin.NodeAnalyze
  Grin.Noodle
  Grin.Optimize
  Grin.SSimplify
  Grin.Show
  Grin.Simplify
  Grin.Unboxing
  Grin.Val
  Grin.Whiz
  Ho.Collected
  Ho.Binary
  Ho.Build
  Ho.Library
  Ho.Type
  Info.Binary
  Info.Info
  Info.Types
  Info.Properties
  Name.Prim
  Name.Binary
  Name.Id
  Name.Name
  Name.Names
  Name.VConsts
  StringTable.Atom
  Support.Tuple
  Support.CFF
  Support.FreeVars
  Support.CanType
  Support.ShowTable
  Support.Tickle
  Support.Transform
  Support.Unparse
  Support.MapBinaryInstance
  Support.MD5
  Util.Graph
  Util.Gen
  Util.ArbitraryInstances
  Util.BitSet
  Util.BooleanSolver
  Util.ContextMonad
  Util.FilterInput
  Util.ReaderWriter
  Util.Graphviz
  Util.HasSize
  Util.Histogram
  Util.Inst
  Util.IntBag
  Util.Interact
  Util.NameMonad
  Util.Once
  Util.Perhaps
  Util.RWS
  Util.Relation
  Util.SHA1
  Util.SameShape
  Util.Seq
  Util.SetLike
  Util.TrueSet
  Util.UnionFind
  Util.UnionSolve
  Util.UniqueMonad
  Util.VarName
  Util.Util
  Version.Version
  Version.Config
