cabal-version:       >= 1.6
name:                lhc
version:             0.9
synopsis:            LHC Haskell Compiler
description:
  lhc is a haskell compiler which aims to produce the most efficient programs possible via whole
  program analysis and other optimizations.
Tested-With:         GHC == 6.10.1
category:            Compiler
license:             PublicDomain
author:              David Himmelstrup, Austin Seipp
maintainer:          lhc@projects.haskell.org
homepage:            http://lhc.seize.it/
build-type:          Custom
data-files:
  rts/rts.ll
  rts/rts.c
  rts/ltm/*.c
  rts/ltm/*.h


flag hpc
  default:            False
flag threaded
  default:            False
flag lhc-regress
  default:            False
flag lhc-pkg
  default:            True

flag with-libs
  default:            False

Executable lhc-exe
 main-is:            GhcMain.hs
 Hs-Source-Dirs:     src
 ghc-prof-options:   -auto-all
 build-depends:      base >= 4 && < 5, mtl, bytestring, containers, ansi-wl-pprint, binary,
                     digest, bytestring-trie, core >=0.5, filepath, directory,
                     derive, unix, xhtml, pretty, ghc >= 6.10, time,
                     parallel, libffi,
                     test-framework, test-framework-hunit, 
                     test-framework-quickcheck

 other-modules:        Paths_lhc
                     , LhcMain
                     , CompactString
                     , Traverse
                     , Setup
                     , Grin.FromCore
                     , Grin.HPT.Environment
                     , Grin.HPT.Lower
                     , Grin.HPT.FastSolve
                     , Grin.HPT
                     , Grin.Lowering.Apply
                     , Grin.Lowering.GHCism
                     , Grin.Optimize.Simple
                     , Grin.Pretty
                     , Grin.SimpleCore.DeadCode
                     , Grin.SimpleCore.Types
                     , Grin.SimpleCore
                     , Grin.Types

 ghc-options:        -fwarn-unused-imports -fwarn-unused-binds -fwarn-incomplete-patterns
 Extensions:         ScopedTypeVariables
 if flag(with-libs)
   x-build-libs:     True
 else
   x-build-libs:     False
 if flag(hpc)
  ghc-options:       -fhpc -hisuf hpc_hi -osuf hpc_o
 if flag(threaded)
  ghc-options:       -threaded

Executable lhc-regress
  if flag(lhc-regress)
    Buildable:      True
  else
    Buildable:      False
  main-is:          Main.hs
  other-modules:    UnitTests, Properties
  hs-source-dirs:   lhc-regress/ src/ tests/
  build-depends:    base >= 4 && < 5, process, extensible-exceptions, HUnit, QuickCheck, test-framework,
                    test-framework-hunit, test-framework-quickcheck

Executable lhc-pkg-exe
  if flag(lhc-pkg)
    Buildable:      True
  else
    Buildable:      False
  hs-source-dirs: lhc-pkg/
  main-is: Main.hs
  Extensions: CPP, ForeignFunctionInterface
  Other-modules: Paths_lhc, Distribution.InstalledPackageInfo.Binary
  Build-Depends: base >= 4 && < 5, directory, process, pretty, haskell98, filepath, Cabal, terminfo

  if !os(windows)
      Build-Depends: unix

