Cabal-version:   >= 1.7
Name: base
Version: 1.0
Build-Type: Simple

Library
  Extensions:      ForeignFunctionInterface
  hs-source-dirs:  src
  Exposed-Modules:
-- These are in base 4
                Control.Applicative
                Control.Arrow
                Control.Category
                -- Control.Concurrent
                -- Control.Concurrent.Chan         
                -- Control.Concurrent.MVar         
                -- Control.Concurrent.QSem         
                -- Control.Concurrent.QSemN                
                -- Control.Concurrent.SampleVar
                -- this is the wrong Control.Exception:
                Control.Exception
                Control.Monad
                Control.Monad.Fix
                Control.Monad.Instances
                -- Control.Monad.ST
                -- Control.Monad.ST.Lazy
                -- Control.Monad.ST.Lazy
                -- Control.OldException
                Data.Bits
                -- Data.Bool
                Data.Char
                Data.Complex
                -- Data.Data was added since base 3
--                 Data.Data
                -- Data.Dynamic
                -- Data.Either
                -- Data.Eq
                -- Data.Fixed
                -- Data.Foldable
                Data.Function
                Data.HashTable
                Data.IORef
                Data.Int
                Data.Ix
                Data.List
                Data.Maybe
                Data.Monoid
                -- Data.Ord
                Data.Ratio
                -- Data.STRef
                -- Data.STRef.Lazy
                -- Data.STRef.Strict
                -- Data.String
                -- Data.Traversable
                Data.Tuple
                Data.Typeable
                -- Data.Unique
                -- Data.Version
                Data.Word
                Debug.Trace
                Foreign
                Foreign.C
                Foreign.C.Error
                Foreign.C.String
                Foreign.C.Types
                -- Foreign.Concurrent
                Foreign.ForeignPtr
                Foreign.Marshal
                Foreign.Marshal.Alloc
                Foreign.Marshal.Array
                Foreign.Marshal.Error
                Foreign.Marshal.Pool
                Foreign.Marshal.Utils
                Foreign.Ptr
                Foreign.StablePtr
                Foreign.Storable
                Numeric
                Prelude
                System.CPUTime
                System.Console.GetOpt
                -- System.Environment
                -- System.Exit
                System.IO
                System.IO.Error
                System.IO.Unsafe
                System.Info
                -- System.Mem
                -- System.Mem.StableName
                -- System.Mem.Weak
                -- System.Posix.Types
                -- System.Timeout
                -- Text.ParserCombinators.ReadP            
                -- Text.ParserCombinators.ReadPrec
                Text.Printf
                -- Text.Read
                -- Text.Read.Lex
                -- Text.Show
                Text.Show.Functions
                Unsafe.Coerce

-- Base 3 has just the above (except as stated above) plus the contents of the new "syb" package

-- These aren't in base 3 *or* 4:
--   This is in "array" since at least base 3:
                Data.Array
--   These can't even have the same API as in "array" (needs MPTCs):
                Data.Array.IO
                Data.Array.Unboxed
--   This is in "haskell98":
                System
--   This is in "directory":
                System.Directory
--   This is in "old-locale":
                System.Locale
--   This is in "random":
--                 System.Random
--   This is in "old-time":
--                 System.Time

-- These are all LHC-specific:
                Data.Unicode
                System.IO.Binary
                Lhc.Addr
                Lhc.Basics
                Lhc.Float
                Lhc.Array
                Lhc.Handle
                Lhc.IO
                Lhc.Tuples
                Prelude.Float
                Prelude.IO
                Prelude.IOError
                Prelude.Text


  include-dirs: include
  install-includes: Typeable.h

  if !impl(lhc)
    buildable:     False
